# ifc-training

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
training/: asgi.py  settings.py  urls.py  wsgi.py
training/core/: apps.py  router.py
training/core/migrations/: 0001_add__custom_user.py  0002_add__person__phone.py
training/core/models/: __init__.py  person.py  user.py
training/core/serializers/: __init__.py  person.py  user.py
training/core/serializers/validators/: __init__.py  person.py
training/core/tests/integration/: __init__.py  person.py  user.py
training/core/tests/unit/models/: __init__.py  person.py  user.py
training/core/tests/unit/serializers/: __init__.py  person.py
training/core/views/: __init__.py  person.py  user.py
