[tool.poetry]
name = "training"
version = "0.1.0"
description = "Fábrica de Software training"
authors = ["Luis <devcorujam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^5.0.0"}
validate-docbr = "^1.8.2"
django-environ = "^0.4.5"
Django = "3.1"
djangorestframework = "3.11"
djoser = "^2.1.0"

[tool.poetry.dev-dependencies]
model-bakery = "^1.2.1"
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.8.0"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
